--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="portfolio-info">
               <h4> AI And Deep Learning</h4>
               <div class="portfolio-links">
-                <a href="https://drive.google.com/file/d/1hbkJgRGcqu0UB3B7T-KhFyQEGXU1iVo9/view" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://drive.google.com/file/d/1HwWwefrMHMuNYRXJ0fiH-xnR3dblCUow/view?usp=drive_link" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -274,7 +274,7 @@
             <div class="portfolio-info">
               <h4>Web Development</h4>
               <div class="portfolio-links">
-                <a href="https://drive.google.com/file/d/1hb_HXeB107FS0dT0gZVQSNPvQhSpPKzK/view" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://drive.google.com/file/d/1SLpZzsr7edBdOhsSANzAtWzuqW2vQsXP/view?usp=drive_link" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
